--- a/strona/templates/strona/kawa_list.html
+++ b/strona/templates/strona/kawa_list.html
@@ -14,6 +14,7 @@
                 <th>Kwasowość</th>
                 <th>Moc</th>
                 <th>Ocena</th>
+                <th>Autor recenzji</th>
             </tr>
         </thead>
         <tbody>
@@ -28,6 +29,7 @@
                         <td>{{ kawa.kwasowość }}</td>
                         <td>{{ kawa.moc }}</td>
                         <td>{{ kawa.ocena }}</td>
+                        <td>{{ kawa.autor }}</td>
                     </tr>
                 {% endif %}
             {% endfor %}
