--- a/strona/templates/strona/piwo_list.html
+++ b/strona/templates/strona/piwo_list.html
@@ -18,6 +18,7 @@
                 <th>Mętność</th>
                 <th>Zgazowanie</th>
                 <th>Ocena</th>
+                <th>Autor recenzji</th>
             </tr>
         </thead>
         <tbody>
@@ -36,6 +37,7 @@
                         <td>{{ piwo.mętność }}</td>
                         <td>{{ piwo.zgazowanie }}</td>
                         <td>{{ piwo.ocena }}</td>
+                        <td>{{ piwo.autor }}</td>
                     </tr>
                 {% endif %}
             {% endfor %}
