--- a/strona/templates/strona/wino_list.html
+++ b/strona/templates/strona/wino_list.html
@@ -15,6 +15,7 @@
                 <th>Aromat</th>
                 <th>Moc</th>
                 <th>Ocena</th>
+                <th>Autor recenzji</th>
             </tr>
         </thead>
         <tbody>
@@ -30,6 +31,7 @@
                         <td>{{ wino.aromat }}</td>
                         <td>{{ wino.moc }}</td>
                         <td>{{ wino.ocena }}</td>
+                        <td>{{ wino.autor }}</td>
                     </tr>
                 {% endif %}
             {% endfor %}
