--- a/strona/templates/strona/yerba_list.html
+++ b/strona/templates/strona/yerba_list.html
@@ -15,6 +15,7 @@
                 <th>Nuty owocowe</th>
                 <th>Trwałość</th>
                 <th>Ocena</th>
+                <th>Autor recenzji</th>
             </tr>
         </thead>
         <tbody>
@@ -30,6 +31,7 @@
                         <td>{{ yerba.nuty_owocowe }}</td>
                         <td>{{ yerba.trwałość }}</td>
                         <td>{{ yerba.ocena }}</td>
+                        <td>{{ yerba.autor }}</td>
                     </tr>
                 {% endif %}
             {% endfor %}
