--- a/strona/templates/strona/kawa_list.html
+++ b/strona/templates/strona/kawa_list.html
@@ -4,8 +4,8 @@
     <h1>Lista Kaw<br/><small><a href="{% url 'kawa_new' %}"><small><span class="glyphicon glyphicon-plus"></span></small> Dodaj nową recencję</small></a></h1>
     <br/>
     <table id = "table" class = "table table-bordered display">
-        <thead class = "alert-success">
-            <tr>
+        <thead>
+            <tr style="background-color: #e6571f; font-family: Helvetica; color: antiquewhite;">
                 <th>Palarnia</th>
                 <th>Nazwa</th>
                 <th>Arabica [%]</th>
@@ -20,7 +20,7 @@
         <tbody>
             {% for kawa in kawas %}
                 {% if kawa.zatwierdzony %}
-                    <tr>
+                    <tr style="font-family: Helvetica; text-align: center;">
                         <td>{{ kawa.firma }}</td>
                         <td><a href="{% url 'kawa_detail' pk=kawa.pk %}">{{ kawa.nazwa }}</a></td>
                         <td>{{ kawa.arabica }}</td>
