--- a/strona/templates/strona/yerba_list.html
+++ b/strona/templates/strona/yerba_list.html
@@ -3,9 +3,9 @@
 {% block content %}
     <h1>Lista Yerb<br/><small><a href="{% url 'yerba_new' %}"><small><span class="glyphicon glyphicon-plus"></span></small> Dodaj nową recencję</small></a></h1>
     <br/>
-    <table id = "table" class = "table table-bordered display">
+    <table id = "table" class = "table table-bordered display" style = "border-color: rgb(201, 201, 201); border-width: 2px;">
         <thead>
-            <tr style="background-color: #e6571f; font-family: Helvetica; color: antiquewhite;">
+            <tr style="background-color: #e6571f; color: antiquewhite; font-family: Helvetica">
                 <th>Firma</th>
                 <th>Nazwa</th>
                 <th>Zapylenie</th>
@@ -37,5 +37,7 @@
             {% endfor %}
         </tbody>
     </table>
+
+
 
 {% endblock %}
