--- a/strona/templates/strona/kawa_detail.html
+++ b/strona/templates/strona/kawa_detail.html
@@ -20,8 +20,7 @@
         <p><b>Moc:</b> {{ kawa.moc }}</p>
         <p><b>Ocena:</b> {{ kawa.ocena }}</p>
         <p><b>Uwagi:</b> {{ kawa.uwagi }}</p>
-        <br/>
-        <p><a href="{% url 'kawa_list' %}">Powrót do listy kaw</a></p>
+        <p><a href="{% url 'kawa_list' %}" class="button2">Powrót do listy kaw</a></p>
         <br/>
     </div>   
 {% endblock %}
