--- a/strona/templates/strona/piwo_detail.html
+++ b/strona/templates/strona/piwo_detail.html
@@ -25,8 +25,7 @@
         <p><b>Zgazowanie:</b> {{ piwo.zgazowanie }}</p>
         <p><b>Ocena:</b> {{ piwo.ocena }}</p>
         <p><b>Uwagi:</b> {{ piwo.uwagi }}</p>
-        <br/>
-        <p><a href="{% url 'piwo_list' %}">Powrót do listy piw</a></p>
+        <p><a href="{% url 'piwo_list' %}" class="button2">Powrót do listy piw</a></p>
         <br/>
     </div>   
 {% endblock %}
