--- a/strona/templates/strona/wino_detail.html
+++ b/strona/templates/strona/wino_detail.html
@@ -69,7 +69,7 @@
         <p><b>Uwagi:</b> {{ wino.uwagi }}</p>
         <br/>
         <p>Nie wiesz co oznaczają niektóre nuty? <a href="{% url 'wino_opis_nut' %}">Dowiedz się tutaj!</a></p>
-        <p><a href="{% url 'wino_list' %}">Powrót do listy win</a></p>
+        <p><a href="{% url 'wino_list' %}" class="button2">Powrót do listy win</a></p>
         <br/>
     </div>   
 {% endblock %}
