--- a/strona/templates/strona/yerba_detail.html
+++ b/strona/templates/strona/yerba_detail.html
@@ -21,8 +21,7 @@
         <p><b>Trwałość:</b> {{ yerba.trwałość }}</p>
         <p><b>Ocena:</b> {{ yerba.ocena }}</p>
         <p><b>Uwagi:</b> {{ yerba.uwagi }}</p>
-        <br/>
-        <p><a href="{% url 'yerba_list' %}">Powrót do listy yerb</a></p>
+        <p><a href="{% url 'yerba_list' %}" class="button2">Powrót do listy yerb</a></p>
         <br/>
     </div>   
 {% endblock %}
