--- a/strona/static/css/strona.css
+++ b/strona/static/css/strona.css
@@ -61,3 +61,61 @@ h1, h2, h3, h4 {
 .strona h2 a, .strona h1 a:visited {
     color: #000000;
 }
+
+a.button1{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration: cornsilk;
+    font-family:'Lobster';
+    font-size: x-large;
+    font-weight:300;
+    color:#FFFFFF;
+    background-color:#e6571f;
+    text-align:center;
+    transition: all 0.2s;
+    width: 40%;
+    
+}
+a.button1:hover{
+    background-color:#dd3f00;
+}
+@media all and (max-width:30em){
+    a.button1{
+        display:block;
+        margin:0.2em auto;
+    }
+} 
+
+a.button2{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0.5em 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:cornsilk;
+    font-family:'Lobster';
+    font-size: medium;
+    font-weight:300;
+    color:#FFFFFF;
+    background-color:#e6571f;
+    text-align:center;
+    transition: all 0.2s;
+    }
+a.button2:hover{
+    background-color:#dd3f00;
+}
+@media all and (max-width:30em){
+    a.button2{
+        display:block;
+        margin:0.2em auto;
+    }
+} 
+
+div.dataTables_wrapper  div.dataTables_filter {
+    width: 100%;
+    float: none;
+    text-align: right;
+  }
