--- a/strona/templates/strona/glowna.html
+++ b/strona/templates/strona/glowna.html
@@ -2,12 +2,16 @@
 
 {% block content %}
     <div class='strona'>
-        <h1><a href="{% url 'yerba_list' %}">Lista Yerb</a></h1>
-        <h1><a href="{% url 'piwo_list' %}">Lista Piw</a></h1>
-        <h1><a href="{% url 'wino_list' %}">Lista Win</a></h1>
-        <h1><a href="{% url 'kawa_list' %}">Lista Kaw</a></h1>
+        <a href="{% url 'yerba_list' %}" class="button1">Lista Yerb</a>
+        <br/>
+        <a href="{% url 'piwo_list' %}" class="button1">Lista Piw</a>
+        <br/>
+        <a href="{% url 'wino_list' %}" class="button1">Lista Win</a>
+        <br/>
+        <a href="{% url 'kawa_list' %}" class="button1">Lista Kaw</a>
+        <br/>
         {% if user.is_authenticated %}
-            <h1><a href="{% url 'recenzje_list' %}">Recenzje do zatwierdzenia</a></h1>
+            <a href="{% url 'recenzje_list' %}" class="button1">Recenzje do zatwierdzenia</a>
         {% endif %}
     </div>
 {% endblock %}
