--- a/strona/templates/strona/piwo_list.html
+++ b/strona/templates/strona/piwo_list.html
@@ -1,8 +1,7 @@
 {% extends 'strona/base.html' %}
 
 {% block content %}
-    <h1>Lista Piw<br/><small><a href="{% url 'piwo_new' %}"><small><span class="glyphicon glyphicon-plus"></span></small> Dodaj nową recencję</small></a></h1>
-    <br/>
+    <h1>Lista Piw<br/><small><a href="{% url 'piwo_new' %}" class="button2">Dodaj nową recencję</small></a></h1>
     <table id = "table" class = "table table-bordered display" style = "border-color: rgb(201, 201, 201); border-width: 2px;">
         <thead>
             <tr style="background-color: #e6571f; font-family: Helvetica; color: antiquewhite;">
