--- a/strona/templates/strona/base.html
+++ b/strona/templates/strona/base.html
@@ -1,58 +1,59 @@
-{% load static %}
-<html>
-    <head>
-        <title>Lubię liczby</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="{% static 'css/strona.css' %}">
-        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.11.1/datatables.min.css"/>
-    </head>
-    <body>
-        <div class='page-header'>
-            {% if user.is_authenticated %}
-                <div class="top-menu">
-                    <p style="font-family:'Lobster'">Witaj {{ user.username }} <small>(<a href="{% url 'logout' %}">Wyloguj</a>)</small></p>
-                </div>
-            {% else %} 
-                <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-            {% endif %}
-            <h1><a href="/">Lubię liczby</a></h1>
-        </div>
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
-                    {% block content %} 
-                    {% endblock %}
+<!DOCTYPE html>
+    <html lang="pl">
+        <head>
+            {% load static %}
+            <title>Lubię liczby</title>
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+            <link rel="stylesheet" href="{% static 'css/strona.css' %}">
+            <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+            <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.11.1/datatables.min.css"/>
+            <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.11.1/datatables.min.js"></script>
+            <script type = "text/javascript">
+                $(document).ready(function(){
+                    $('#table').DataTable( {
+                        "language": {
+                            "decimal":        "",
+                            "emptyTable":     "Brak recenzji.",
+                            "info":           "Wyświetlono od _START_ do _END_ z _TOTAL_ wyników",
+                            "infoEmpty":      "Wyświetlono od 0 do 0 z 0 wyników",
+                            "infoFiltered":   "(z _MAX_ wyników w bazie)",
+                            "infoPostFix":    "",
+                            "thousands":      ",",
+                            "lengthMenu":     "Pokaż _MENU_ wyników",
+                            "loadingRecords": "Ładowanie...",
+                            "processing":     "Procesowanie...",
+                            "search":         "Szukaj:",
+                            "zeroRecords":    "Nie znaleziono pasujących elementów.",
+                            "paginate": {
+                                "first":      "Pierwsza",
+                                "last":       "Ostatnia",
+                                "next":       "Następna",
+                                "previous":   "Poprzednia"
+                            }
+                        }
+                    });
+                });
+            </script>
+        </head>
+        <body>
+            <div class='page-header'>
+                {% if user.is_authenticated %}
+                    <div class="top-menu">
+                        <p style="font-family:'Lobster'">Witaj {{ user.username }} <small>(<a href="{% url 'logout' %}">Wyloguj</a>)</small></p>
+                    </div>
+                {% else %} 
+                    <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+                {% endif %}
+                <h1><a href="/">Lubię liczby</a></h1>
+            </div>
+            <div class="content container">
+                <div class="row">
+                    <div class="col-md-8">
+                        {% block content %} 
+                        {% endblock %}
+                    </div>
                 </div>
             </div>
-        </div>
-    </body>
-        <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.11.1/datatables.min.js"></script>
-        <script type = "text/javascript">
-            $(document).ready(function(){
-                $('#table').DataTable( {
-                    "language": {
-                        "decimal":        "",
-                        "emptyTable":     "Brak recenzji.",
-                        "info":           "Wyświetlono od _START_ do _END_ z _TOTAL_ wyników",
-                        "infoEmpty":      "Wyświetlono od 0 do 0 z 0 wyników",
-                        "infoFiltered":   "(z _MAX_ wyników w bazie)",
-                        "infoPostFix":    "",
-                        "thousands":      ",",
-                        "lengthMenu":     "Pokaż _MENU_ wyników",
-                        "loadingRecords": "Ładowanie...",
-                        "processing":     "Procesowanie...",
-                        "search":         "Szukaj:",
-                        "zeroRecords":    "Nie znaleziono pasujących elementów.",
-                        "paginate": {
-                            "first":      "Pierwsza",
-                            "last":       "Ostatnia",
-                            "next":       "Następna",
-                            "previous":   "Poprzednia"
-                        }
-                    }
-                });
-            });
-        </script>
-</html>
+        </body>
+    </html>
