--- a/strona/templates/strona/kawa_edit.html
+++ b/strona/templates/strona/kawa_edit.html
@@ -1,9 +1,11 @@
 {% extends 'strona/base.html' %}
+{% load crispy_forms_tags %}
+{% crispy example_form example_form.helper %}
 
 {% block content %}
     <h2>Nowa recenzja kawy</h2>
+    <br/>
     <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="button2">Zapisz</button>
+        {% crispy form %}
     </form>
 {% endblock %}
