--- a/strona/templates/strona/wino_detail.html
+++ b/strona/templates/strona/wino_detail.html
@@ -14,6 +14,7 @@
         <h2>{{ wino.firma }}: {{ wino.nazwa }}</h2>
         <p><b>Autor recenzji:</b> {{ wino.autor }}</p>
         <p><b>Typ:</b> {{ wino.typ }}</p>
+        <p><b>Zawartość cukru:</b> {{ wino.zawartość_cukru }}</p>
         <p><b>Kolor (jak bardzo ciemne):</b> {{ wino.kolor }}</p>
         <p><b>Klarowność:</b> {{ wino.klarowność }}</p>
         <p><b>Musowanie:</b> {{ wino.musowanie }}</p>
