--- a/strona/static/css/strona.css
+++ b/strona/static/css/strona.css
@@ -114,6 +114,31 @@ a.button2:hover{
     }
 } 
 
+.button2{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0.5em 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:cornsilk;
+    font-family:'Lobster';
+    font-size: medium;
+    font-weight:300;
+    color:#FFFFFF;
+    background-color:#e6571f;
+    text-align:center;
+    transition: all 0.2s;
+    }
+.button2:hover{
+    background-color:#dd3f00;
+}
+@media all and (max-width:30em){
+    .button2{
+        display:block;
+        margin:0.2em auto;
+    }
+}
+
 .form50 {
     width: 50%;
 }
