--- a/strona/templates/strona/piwo_detail.html
+++ b/strona/templates/strona/piwo_detail.html
@@ -14,6 +14,7 @@
         <h2>{{ piwo.firma }}: {{ piwo.nazwa }}</h2>
         <p><b>Autor recenzji:</b> {{ piwo.autor }}</p>
         <p><b>Typ:</b> {{ piwo.typ }}</p>
+        <p><b>Styl:</b> {{ piwo.styl }}</p>
         <p><b>Aromat:</b> {{ piwo.aromat }}</p>
         <p><b>Smak:</b> {{ piwo.smak }}</p>
         <p><b>Moc:</b> {{ piwo.moc }}</p>
