--- a/strona/templates/strona/glowna.html
+++ b/strona/templates/strona/glowna.html
@@ -2,13 +2,13 @@
 
 {% block content %}
     <div class='strona'>
-        <a href="{% url 'yerba_list' %}" class="button1">Lista Yerb</a>
+        <a href="{% url 'yerba_list' %}" class="button1">Recenzje Yerb</a>
         <br/>
-        <a href="{% url 'piwo_list' %}" class="button1">Lista Piw</a>
+        <a href="{% url 'piwo_list' %}" class="button1">Recenzje Piw</a>
         <br/>
-        <a href="{% url 'wino_list' %}" class="button1">Lista Win</a>
+        <a href="{% url 'wino_list' %}" class="button1">Recenzje Win</a>
         <br/>
-        <a href="{% url 'kawa_list' %}" class="button1">Lista Kaw</a>
+        <a href="{% url 'kawa_list' %}" class="button1">Recenzje Kaw</a>
         <br/>
         {% if user.is_authenticated %}
             <a href="{% url 'recenzje_list' %}" class="button1">Recenzje do zatwierdzenia</a>
