--- a/strona/templates/strona/yerba_list.html
+++ b/strona/templates/strona/yerba_list.html
@@ -1,7 +1,7 @@
 {% extends 'strona/base.html' %}
 
 {% block content %}
-    <h1>Lista Yerb<br/><small><a href="{% url 'yerba_new' %}" class="button2">Dodaj nową recencję</small></a></h1>
+    <h1>Recenzje Yerb<br/><small><a href="{% url 'yerba_new' %}" class="button2">Dodaj nową recencję</small></a></h1>
     <table id = "table" class = "table table-bordered display" style = "border-color: rgb(201, 201, 201); border-width: 2px;">
         <thead>
             <tr style="background-color: #e6571f; color: antiquewhite; font-family: Helvetica">
