--- a/strona/templates/strona/glowna.html
+++ b/strona/templates/strona/glowna.html
@@ -10,6 +10,8 @@
         <br/>
         <a href="{% url 'kawa_list' %}" class="button1">Recenzje Kaw</a>
         <br/>
+        <a href="{% url 'drink_list' %}" class="button1">Przepisy na drinki</a>
+        <br/>
         {% if user.is_authenticated %}
             <a href="{% url 'recenzje_list' %}" class="button1">Recenzje do zatwierdzenia</a>
         {% endif %}
